--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
 
   </div>
 
+  <script type="text/javascript" src="static/lib/js/underscore.min.js"></script>
   <script type="text/javascript" src="static/lib/js/jquery.min.js"></script>
   <script type="text/javascript" src="static/lib/js/bootstrap.min.js"></script>
 
