Change layout of boxes

--- a/index.html
+++ b/index.html
@@ -12,14 +12,19 @@
       <div class="navbar-header">
         <a class="navbar-brand" href="#">Henry's Room</a>
       </div>
-      <span class="updated">Last updated: <span class="updated-time">XXX</span></span>
+      <ul class="nav navbar-nav navbar-right">
+        <li class="updated">
+          <a href="#">Last updated: <span class="updated-time"></span></a>
+        </li>
+      </ul>
+
     </div>
   </div>
 
   <div class="container-fluid">
 
     <div class="row">
-      <div class="col-sm-4">
+      <div class="col-sm-12">
         <div class="chart-wrapper">
           <div class="chart-title">
             Current
@@ -40,7 +45,10 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-8">
+    </div>
+
+    <div class="row">
+      <div class="col-md-6">
         <div class="chart-wrapper">
           <div class="chart-title">
             Last hour
@@ -53,10 +61,7 @@
           </div>
         </div>
       </div>
-    </div>
-
-    <div class="row">
-      <div class="col-sm-6 col-md-4">
+      <div class="col-md-6">
         <div class="chart-wrapper">
           <div class="chart-title">
             Last 12 hours
@@ -69,7 +74,9 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-6 col-md-4">
+    </div>
+    <div class="row">
+      <div class="col-md-6">
         <div class="chart-wrapper">
           <div class="chart-title">
             Last 24 Hours
@@ -82,7 +89,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-6 col-md-4">
+      <div class="col-md-6">
         <div class="chart-wrapper">
           <div class="chart-title">
             Last Week
@@ -95,8 +102,9 @@
           </div>
         </div>
       </div>
-<!-- end of three -->
-      <div class="col-sm-6 col-md-4">
+    </div>
+    <div class="row">
+      <div class="col-md-6">
         <div class="chart-wrapper">
           <div class="chart-title">
             Last Month
@@ -109,7 +117,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-6 col-md-4">
+      <div class="col-md-6">
         <div class="chart-wrapper">
           <div class="chart-title">
             Last Year
@@ -122,7 +130,9 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-6 col-md-4">
+    </div>
+    <div class="row">
+      <div class="col-md-6">
         <div class="chart-wrapper">
           <div class="chart-title">
             All Time
@@ -135,7 +145,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-6 col-md-4">
+      <div class="col-md-6">
         <div class="chart-wrapper">
           <div class="chart-title">
             Average By Time of Day
@@ -148,7 +158,9 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-6 col-md-4">
+    </div>
+    <div class="row">
+      <div class="col-md-6">
         <div class="chart-wrapper">
           <div class="chart-title">
             Average By Day of Week
