Using chart.js extension for scatter plot

--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
 
   <script type="text/javascript" src="static/lib/js/keen.min.js"></script>
   <script type="text/javascript" src="static/lib/js/Chart.min.js"></script>
+  <script type="text/javascript" src="static/lib/js/Chart.Scatter.min.js"></script>
   <script type="text/javascript" src="static/js/graphs.js"></script>
 
 </body>
