Add canvas placeholders for charts

--- a/index.html
+++ b/index.html
@@ -17,12 +17,10 @@
           <a href="#">Last updated: <span class="updated-time"></span></a>
         </li>
       </ul>
-
     </div>
   </div>
 
   <div class="container-fluid">
-
     <div class="row">
       <div class="col-sm-12">
         <div class="chart-wrapper">
@@ -56,9 +54,6 @@
           <div class="chart-stage">
             <canvas id="last-hour-chart"></canvas>
           </div>
-          <div class="chart-notes">
-            Notes about this chart
-          </div>
         </div>
       </div>
       <div class="col-md-6">
@@ -67,10 +62,7 @@
             Last 12 hours
           </div>
           <div class="chart-stage">
-            <img data-src="holder.js/100%x120/white">
-          </div>
-          <div class="chart-notes">
-            Notes about this chart
+            <canvas id="twelve-hour-chart"></canvas>
           </div>
         </div>
       </div>
@@ -82,10 +74,7 @@
             Last 24 Hours
           </div>
           <div class="chart-stage">
-            <img data-src="holder.js/100%x120/white">
-          </div>
-          <div class="chart-notes">
-            Notes about this chart
+            <canvas id="twentyfour-hour-chart"></canvas>
           </div>
         </div>
       </div>
@@ -95,10 +84,7 @@
             Last Week
           </div>
           <div class="chart-stage">
-            <img data-src="holder.js/100%x120/white">
-          </div>
-          <div class="chart-notes">
-            Notes about this chart
+            <canvas id="week-hour-chart"></canvas>
           </div>
         </div>
       </div>
@@ -110,10 +96,7 @@
             Last Month
           </div>
           <div class="chart-stage">
-            <img data-src="holder.js/100%x120/white">
-          </div>
-          <div class="chart-notes">
-            Notes about this chart
+            <canvas id="month-hour-chart"></canvas>
           </div>
         </div>
       </div>
@@ -123,10 +106,7 @@
             Last Year
           </div>
           <div class="chart-stage">
-            <img data-src="holder.js/100%x120/white">
-          </div>
-          <div class="chart-notes">
-            Notes about this chart
+            <canvas id="year-hour-chart"></canvas>
           </div>
         </div>
       </div>
@@ -138,10 +118,7 @@
             All Time
           </div>
           <div class="chart-stage">
-            <img data-src="holder.js/100%x120/white">
-          </div>
-          <div class="chart-notes">
-            Notes about this chart
+            <canvas id="all-hour-chart"></canvas>
           </div>
         </div>
       </div>
@@ -151,10 +128,7 @@
             Average By Time of Day
           </div>
           <div class="chart-stage">
-            <img data-src="holder.js/100%x120/white">
-          </div>
-          <div class="chart-notes">
-            Notes about this chart
+            <canvas id="average-day-chart"></canvas>
           </div>
         </div>
       </div>
@@ -166,10 +140,7 @@
             Average By Day of Week
           </div>
           <div class="chart-stage">
-            <img data-src="holder.js/100%x120/white">
-          </div>
-          <div class="chart-notes">
-            Notes about this chart
+            <canvas id="average-week-chart"></canvas>
           </div>
         </div>
       </div>
