Fix problem with update label breaking to next line

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body class="application">
   <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container-fluid">
-      <div class="navbar-header">
+      <div class="navbar-header location">
         <a class="navbar-brand" href="#">Henry's Room</a>
       </div>
-      <ul class="nav navbar-nav navbar-right">
+      <ul class="nav navbar-nav navbar-right updated-container">
         <li class="updated">
           <a href="#">Last updated: <span class="updated-time"></span></a>
         </li>
