Update client to query server

--- a/client/index.html
+++ b/client/index.html
@@ -155,14 +155,14 @@
   <hr>
   <p class="small text-muted">Built with &#9829; by <a href="https://keen.io">Keen IO</a></p>
 
-  <script type="text/javascript" src="https://temperature-sensor.firebaseapp.com/lib/js/d3.min.js" charset="utf-8"></script>
-  <script type="text/javascript" src="https://temperature-sensor.firebaseapp.com/lib/js/jquery.min.js"></script>
-  <script type="text/javascript" src="https://temperature-sensor.firebaseapp.com/lib/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="static/lib/js/d3.min.js" charset="utf-8"></script>
+  <script type="text/javascript" src="static/lib/js/jquery.min.js"></script>
+  <script type="text/javascript" src="static/lib/js/bootstrap.min.js"></script>
 
-  <script type="text/javascript" src="https://temperature-sensor.firebaseapp.com/lib/js/keen.min.js"></script>
-  <script type="text/javascript" src="https://temperature-sensor.firebaseapp.com/lib/js/Chart.min.js"></script>
-  <script type="text/javascript" src="https://temperature-sensor.firebaseapp.com/lib/js/Chart.Scatter.min.js"></script>
-  <script type="text/javascript" src="https://temperature-sensor.firebaseapp.com/js/graphs.js"></script>
+  <script type="text/javascript" src="static/lib/js/keen.min.js"></script>
+  <script type="text/javascript" src="static/lib/js/Chart.min.js"></script>
+  <script type="text/javascript" src="static/lib/js/Chart.Scatter.min.js"></script>
+  <script type="text/javascript" src="static/js/graphs.js"></script>
 
 </body>
 </html>
